--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
   <body>
       <h1>
-    Hello there, awesome person! 
+<img src="https://avatars.githubusercontent.com/u/90880062?v=4">
+
       </h1>
   </body>
 
