--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <img src="https://avatars.githubusercontent.com/u/90880062?v=4">
 
       </h1>
+      <o1>
+          <li>youtube.ca</li>
+          <li>instagram</li>
+      </o1>
   </body>
 
 </html>
