--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <img src="https://avatars.githubusercontent.com/u/90880062?v=4">
 <ol>
     <li>youtube</li>
-    <li>instagram</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
           </ol>
       </h1>
   </body>
